mark emails as safe

--- a/thankyou/youre-in.html
+++ b/thankyou/youre-in.html
@@ -108,6 +108,9 @@
 
         Let’s reset. I’ve got you.<br />
         — Diana x
+
+            <p>Make sure your emails from <strong>rtr@artificialmomentum.com</strong> are marked safe — you won’t want to miss Day a thing!</p>
+
       </div>
 
       <div class="footer">
