mark emails safe

--- a/started.html
+++ b/started.html
@@ -116,6 +116,9 @@
     <a href="https://raw.artificialmomentum.com/day1/day1-video.html" class="button">Start Day 1</a>
 
     <p style="font-size:.9rem;opacity:.8;margin-top:24px;">With rhythm,<br><strong>Diana Air</strong><br>Raw to Reset Coaching</p>
+
+        <p>Until then, make sure your emails from <strong>rtr@artificialmomentum.com</strong> are marked safe — you won’t want to miss Day 1!</p>
+
   </div>
 </body>
 </html>
