--- a/started.html
+++ b/started.html
@@ -117,7 +117,7 @@
 
     <p style="font-size:.9rem;opacity:.8;margin-top:24px;">With rhythm,<br><strong>Diana Air</strong><br>Raw to Reset Coaching</p>
 
-        <p>Until then, make sure your emails from <strong>rtr@artificialmomentum.com</strong> are marked safe — you won’t want to miss Day 1!</p>
+        <p>Until then, make sure your emails from <strong>rtr@artificialmomentum.com</strong> are marked safe — you won’t want to miss a thing!</p>
 
   </div>
 </body>
