--- a/day1/day1-video.html
+++ b/day1/day1-video.html
@@ -98,6 +98,7 @@
     <header>
       <h1>Day 1 · Raw to Reset</h1>
       <p class="lead"><strong>Welcome to you're 5 day reset</strong></p>
+      
     </header>
 
     <div class="player">
@@ -113,13 +114,14 @@
       <a class="btn" href="day1-cheatsheet.html" target="_blank" rel="noopener">Get Today’s Cheatsheet</a>
       <a class="btn" href="mailto:rtr@artificialmomentum.com">Ask a Question</a>
     </div>
+    
 
     <p class="muted">
       Tip: If video is choppy on mobile, switch Wi-Fi or tap the ••• menu to <em>Download</em> and watch locally.<br>
       <a href="day1vid.mp4" download>Download the video</a>
     </p>
 
-    <footer>© Artificial Momentum · Diana Air Coaching × ECHO</footer>
+    <footer>© Artificial Momentum . Diana Air Coaching × ECHO</footer>
   </div>
 </body>
 </html>
