Content edit Cycle lens and quick win

--- a/day1/day1-cheatsheet.html
+++ b/day1/day1-cheatsheet.html
@@ -132,14 +132,16 @@
     <section class="card">
       <h2>🧭 Cycle Lens</h2>
       <ul>
-        <li>Works in any phase, especially <strong>Menstruation (Days 1–5)</strong>. From Day 1 you might feel “nearly ready” to launch into whatever you haven't been able to get into in the Luteal phase — steady the pace though and set the board, don’t sprint.</li>
-        <li>Your nervous system is asking for <em>pacing</em>. Line up the skittles in the first couple of days; you’re not letting anyone down if you don't take the shot. You’re perfecting the game and you'll score a strike in a day or two.</li>
+        <li>Works in any phase, especially <strong>Menstruation (Days 1–5)</strong>. As bleeding begins, estrogen and progesterone both dip — so your brain’s energy use slows and your nervous system shifts into “repair mode.” That’s why motivation and focus can feel thin.</li>
+        <li>Your nervous system is asking for <em>pacing</em>. Don’t push. Pace. Line up the pieces — your brain is recalibrating. You’re not falling behind; you’re building stability for the surge that’s coming.</li>
       </ul>
     </section>
 
     <section class="card tone">
       <h2>💧 Quick Win</h2>
-      <p><span class="kicker">Before coffee tomorrow:</span> drink a big glass of water + electrolytes. It gently wakes your nervous system, balances blood pressure, and fuels steady energy. If you don't have electrolytes — add lemon + a pinch of mineral salt.</p>
+      <p><span class="kicker">Before coffee tomorrow morning:
+🥤 1 large glass of water + electrolytes (or lemon + pinch of mineral salt).
+→ Why it matters: Estrogen’s low, sodium retention drops, and blood pressure can dip — hydration + minerals rebalance the system and wake your brain gently.</p>
     </section>
 
     <section class="card">
