beta feedback edits

--- a/day1/day1-cheatsheet.html
+++ b/day1/day1-cheatsheet.html
@@ -129,36 +129,47 @@
 </figure>
 
 
-    <section class="card">
+        <section class="card">
       <h2>🧭 Cycle Lens</h2>
       <ul>
-        <li>Works in any phase, especially <strong>Menstruation (Days 1–5)</strong>. As bleeding begins, estrogen and progesterone both dip — so your brain’s energy use slows and your nervous system shifts into “repair mode.” That’s why motivation and focus can feel thin.</li>
-        <li>Your nervous system is asking for <em>pacing</em>. Don’t push. Pace. Line up the pieces — your brain is recalibrating. You’re not falling behind; you’re building stability for the surge that’s coming.</li>
+        <li>Works in any phase, but <strong>especially menstruation (Days 1–5)</strong>. As bleeding begins, estrogen and progesterone both dip — so your brain’s energy use slows and your nervous system shifts into “repair mode.”</li>
+        <li>That’s why motivation and focus can feel thin. → Don’t push. <em>Pace.</em> Line up the pieces — your brain is recalibrating. You’re not falling behind; you’re building stability for the surge that’s coming.</li>
       </ul>
     </section>
 
     <section class="card tone">
       <h2>💧 Quick Win</h2>
-      <p><span class="kicker">Before coffee tomorrow morning:
-🥤 1 large glass of water + electrolytes (or lemon + pinch of mineral salt).
-→ Why it matters: Estrogen’s low, sodium retention drops, and blood pressure can dip — hydration + minerals rebalance the system and wake your brain gently.</p>
+      <p><strong>Before coffee tomorrow morning:</strong><br>
+      🥤 1 large glass of water + electrolytes (or lemon + a pinch of mineral salt).<br>
+      <em class="why">Why it matters:</em> Estrogen’s low, sodium retention drops, and blood pressure can dip — hydration + minerals rebalance the system and wake your brain gently.</p>
     </section>
 
     <section class="card">
       <h2>🧪 Signals to Notice</h2>
-      <ul>
-        <li><strong>Mood swings or cravings</strong> → be your body's ally. It's asking for balance, not punishment.</li>
-        <li><strong>Low energy</strong> → a nervous-system flag, not laziness. (Ban the “I’m lazy” label.)</li>
-        <li><strong>Foggy brain</strong> → hydration + minerals often help. Try screens off and connection for 30 minutes, call someone who lifts you. <em class="why">Not raw feelings today — we’re not looking for emotional surgery, just reconnection.</em></li>
-      </ul>
+      <table style="width:100%;border-collapse:collapse;font-size:.95rem;">
+        <thead>
+          <tr style="text-align:left;border-bottom:1px solid var(--line);">
+            <th style="padding:4px 0;">What you feel</th>
+            <th style="padding:4px 0;">What’s happening</th>
+            <th style="padding:4px 0;">Support move</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr><td>Mood swings / cravings</td><td>Cortisol and serotonin are recalibrating.</td><td>Protein + magnesium calm the axis.</td></tr>
+          <tr><td>Low energy</td><td>Prostaglandins + lower estrogen slow glucose use.</td><td>Hydrate, mineralize, rest guilt-free.</td></tr>
+          <tr><td>Foggy brain</td><td>Blood volume + iron are lower early bleed.</td><td>Protein breakfast + steady water intake.</td></tr>
+          <tr><td>Emotional dips</td><td>Dopamine temporarily dips with estrogen.</td><td>Move lightly, get sunlight, connection.</td></tr>
+        </tbody>
+      </table>
+      <p class="why">Not raw feelings today — we’re not looking for emotional surgery, just reconnection.</p>
     </section>
 
     <section class="card">
       <h2>🧰 Support Moves</h2>
       <ul>
-        <li><strong>Fuel early:</strong> protein + minerals within 60 minutes of waking. My mix: electrolytes, creatine, and pea protein after an overnight fast (tune the fasting window to your body + cycle phase).</li>
-        <li><strong>Pace:</strong> swap “push through” for <em>listening</em>. Lighter movement counts — think yoga over HIIT.</li>
-        <li><strong>Grace:</strong> if you’re ADHD/RSD/ND like me, the inner narrator can really drag you down. Offer yourself the same kindness you’d give your child.<em class="why">Try repeating: “This will pass, my body's got my back.”</em></li>
+        <li><strong>Fuel early:</strong> 20–30 g protein + minerals within 60 minutes of waking.<br><em class="why">I use electrolytes, creatine, and pea protein after an overnight fast.</em></li>
+        <li><strong>Pace wisely:</strong> swap “push through” for “check in.” Yoga, walking, stretching > HIIT today.</li>
+        <li><strong>Grace first:</strong> if you’re ADHD/RSD/ND, the self-talk spiral is real. Offer yourself the same tone you’d use with your child.<br><em class="why">“This will pass. My body’s got my back.”</em></li>
       </ul>
     </section>
 
@@ -169,8 +180,13 @@
 
     <section class="card">
       <h2>🧠 Why (mini-physiology)</h2>
-      <p class="tiny">Prostaglandins (body-wide inflammation) + lower estrogen can amplify fatigue. Hydration + minerals can reduce headache/fog.</p>
+      <p class="tiny">
+        During menstruation, prostaglandins rise to help the uterus release its lining — but they also increase inflammation body-wide.  
+        Low estrogen = less serotonin, less fluid retention, and a slower glucose metabolism.  
+        That’s why water, minerals, and protein feel like medicine right now — they literally refill what your chemistry’s spending on repair.
+      </p>
     </section>
+
 
     <div class="cta-row">
       <a class="btn" href="day1-video.html">Watch Today’s Video</a>
