beta feedback rewrite

--- a/day2/day2-cheatsheet.html
+++ b/day2/day2-cheatsheet.html
@@ -104,56 +104,73 @@
     </div>
 
     <header>
-      <h1>Day 2 — Feeling Edgy? PMT Isn’t the Problem</h1>
-      <div class="sub">Your luteal phase is asking for this</div>
-    </header>
+  <h1>Day 2 — Feeling Edgy? PMT Isn’t the Problem</h1>
+  <div class="sub">Your luteal phase is asking for rhythm, not resistance</div>
+</header>
 
-    <figure class="hero">
-      <img src="journal-moment.jpg" alt="Woman journaling">
-    </figure>
+<figure class="hero">
+  <img src="journal-moment.jpg" alt="Woman journaling">
+</figure>
 
-    <section class="card">
-      <h2>🧭 Cycle Lens</h2>
-      <ul>
-        <li>Mid-luteal (around 10–12 days pre-bleed) is when small misalignments feel amplified. You’re not “overreacting” — your brain is surfacing truth.</li>
-        <li>Chemistry shifts from performance to protection. When things feel off, your body’s asking for boundaries, not blame.</li>
-      </ul>
-    </section>
+<section class="card">
+  <h2>🧭 Cycle Lens</h2>
+  <ul>
+    <li>Mid-luteal (roughly 10–14 days pre-bleed) is when *truth gets loud*. You’re not “overreacting” — your brain’s filtering system is more transparent now, revealing what’s been quietly stressing your nervous system.</li>
+    <li>Chemistry shifts from *performance to protection*. Estrogen drops, progesterone rises, and your body’s priority changes from pushing forward to creating safety.</li>
+    <li>→ When irritability or exhaustion hits, it’s feedback — not failure. Your body’s saying “slow input, hold your boundaries.”</li>
+  </ul>
+</section>
 
-    <section class="card tone">
-      <h2>🌙 Quick Win</h2>
-      <p><strong>Tonight:</strong> dim the lights and slow stimulation two hours before bed — circadian chemistry loves predictability. Add a <strong>food-based B-complex</strong> with dinner (leafy greens, seeds, or nutritional yeast). It steadies progesterone metabolism and smooths your serotonin curve.</p>
-    </section>
+<section class="card tone">
+  <h2>🌙 Quick Win</h2>
+  <p><strong>Tonight:</strong> dim lights two hours before bed, reduce stimulation, and add a <strong>food-based B-complex</strong> with dinner (leafy greens, seeds, nutritional yeast).  
+  <em class="why">Why it matters:</em> B-vitamins help your liver process progesterone smoothly and stabilize serotonin — reducing night-time restlessness and emotional swings.</p>
+</section>
 
-    <section class="card">
-      <h2>🧪 Signals to Notice</h2>
-      <ul>
-        <li>Snappy, teary, “done with everyone” feelings — <strong>this is data, not defects.</strong><em class="why">→ Your brain is flagging overstimulation and a serotonin dip — not failure, just feedback.</em></li>
-        <li>“It’s not you, it’s your chemistry.”<em class="why">→ Estrogen dips and progesterone rises — shifting serotonin + GABA, your calm-and-steady messengers.</em></li>
-        <li>Saying “yes” while your face says “hell no”?<em class="why">→ The luteal phase thins emotional filters. Your feelings aren’t wrong — they’re just louder. Protect your peace and postpone heavy conversations.</em></li>
-      </ul>
-    </section>
+<section class="card">
+  <h2>🧪 Signals to Notice</h2>
+  <table style="width:100%;border-collapse:collapse;font-size:.95rem;">
+    <thead>
+      <tr style="text-align:left;border-bottom:1px solid var(--line);">
+        <th style="padding:4px 0;">What you feel</th>
+        <th style="padding:4px 0;">What’s happening</th>
+        <th style="padding:4px 0;">Support move</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr><td>Snappy, teary, “done with everyone”</td><td>Serotonin dips + overstimulation sensitivity peak.</td><td>Lower screens, dim lights, magnesium with dinner.</td></tr>
+      <tr><td>Hard to focus / restless sleep</td><td>Progesterone slows brain processing, raising body temp.</td><td>Cool bedroom, slow breathing, limit caffeine PM.</td></tr>
+      <tr><td>Saying “yes” when your face says “no”</td><td>Luteal honesty — emotional filters thin, truth gets louder.</td><td>Protect boundaries, postpone big talks.</td></tr>
+    </tbody>
+  </table>
+  <p class="why">→ None of this is “moodiness.” It’s your brain’s chemistry syncing to a different operating mode.</p>
+</section>
 
-    <section class="card">
-      <h2>🧰 Support Moves</h2>
-      <ul>
-        <li><strong>Ground with minerals + protein</strong> — magnesium-rich foods + lean protein at dinner calm the evening drop.</li>
-        <li><strong>Guard your wind-down</strong> — blue-light off 2 hours before bed; keep lights low and thoughts lighter.</li>
-        <li><strong>Slow input</strong> — journal, stretch, or tidy small spaces. You’re helping the nervous system file the day, not fix it.</li>
-      </ul>
-      <em class="why">→ These rituals re-signal safety so hormones can recalibrate overnight.</em>
-    </section>
+<section class="card">
+  <h2>🧰 Support Moves</h2>
+  <ul>
+    <li><strong>Ground with minerals + protein:</strong> magnesium-rich foods and lean protein at dinner calm the evening cortisol curve.</li>
+    <li><strong>Guard your wind-down:</strong> blue-light off two hours before bed; keep lights warm and thoughts lighter.</li>
+    <li><strong>Slow input:</strong> journal, stretch, or tidy small spaces — this helps your nervous system file the day, not fix it.</li>
+  </ul>
+  <em class="why">→ These rituals signal safety so your hormones can recalibrate overnight.</em>
+</section>
 
-    <section class="card">
-      <h2>💭 Reflection Prompt</h2>
-      <p>Where did honesty show up today? Did slowing down create clarity instead of guilt?</p>
-      <em class="why">→ Note moments your body asked for stillness — and what happened when you listened.</em>
-    </section>
+<section class="card">
+  <h2>💭 Reflection Prompt</h2>
+  <p><em>Where did honesty show up today? Did slowing down create clarity instead of guilt?</em></p>
+  <em class="why">→ Note when your body asked for stillness — and what shifted when you listened.</em>
+</section>
 
-    <section class="card">
-      <h2>🧠 Why (mini-physiology)</h2>
-      <p class="tiny">As progesterone climbs and estrogen falls, serotonin (mood) and GABA (calm) both shift — making the brain quicker to react and slower to settle. Knowing this helps you support yourself instead of self-critiquing.</p>
-    </section>
+<section class="card">
+  <h2>🧠 Why (mini-physiology)</h2>
+  <p class="tiny">
+    As progesterone climbs and estrogen tapers, your brain’s serotonin and GABA systems rebalance.  
+    That’s why you may feel more sensitive, sleepy, or reactive — it’s chemistry, not character.  
+    Supporting progesterone metabolism (with B-vitamins, magnesium, and calm evenings) helps your body sustain stable mood and energy until bleed.
+  </p>
+</section>
+
 
     <div class="cta-row">
       <a class="btn" href="day2-video.html">Watch Today’s Video</a>
