beta feedback edits

--- a/day3/day3-cheatsheet.html
+++ b/day3/day3-cheatsheet.html
@@ -102,59 +102,74 @@
     </div>
 
     <header>
-      <h1>Day 3 — Bloat, Burnout, and the Bullsh*t We’ve Normalized</h1>
-      <div class="sub">You’re not lazy — you need fuel.</div>
-    </header>
+  <h1>Day 3 — Bloat, Burnout, and the Bullsh*t We’ve Normalized</h1>
+  <div class="sub">You’re not lazy — you’re low on fuel.</div>
+</header>
 
-    <figure class="hero">
-      <img src="workout-prep.jpg" alt="workout-prep">
-    </figure>
+<figure class="hero">
+  <img src="workout-prep.jpg" alt="Workout prep — woman tying shoes before exercise">
+</figure>
 
-    <section class="card">
-      <h2>🧭 Cycle Lens</h2>
-      <ul>
-        <li>Late follicular → luteal transition = appetite/sugar swings spike. It’s right after ovulation: you’re either prepping to bleed or your body’s prepping to grow a baby.</li>
-        <li>Misfits magnify — you’re not suddenly “moody,” you’re just less willing to swallow what annoys you. The rest of the month it’s applauded as emotional maturity. Today it gets mislabelled PMS when you finally snap at the same tired joke. Well… hello 🙃</li>
-      </ul>
-    </section>
+<section class="card">
+  <h2>🧭 Cycle Lens</h2>
+  <ul>
+    <li>Late follicular → luteal transition = appetite and sugar swings spike. You’re post-ovulation — either prepping to bleed or to grow a baby, and metabolism is shifting gears.</li>
+    <li>Estrogen’s easing down while progesterone climbs, changing how you burn glucose and manage mood. The “bloat / brain-fog / short fuse” trifecta is not weakness — it’s chemistry mid-recalibration.</li>
+    <li>→ This is the reset window where your body’s testing stability. Meet it with rhythm, not restriction.</li>
+  </ul>
+</section>
 
-    <section class="card tone">
-      <h2>🌙 Quick Win</h2>
-      <p><strong>Mid-morning anchor:</strong> 20–30 g protein + fiber + minerals. This steadies blood sugar, reduces cravings, and brings your brain back into usable focus.</p>
-    </section>
+<section class="card tone">
+  <h2>🌙 Quick Win</h2>
+  <p><strong>Mid-morning anchor:</strong> 20–30 g protein + fiber + minerals.<br>
+  <em class="why">Why it matters:</em> Blood-sugar dips exaggerate cortisol spikes and fog your focus. Anchoring early keeps estrogen’s calm energy steady and prevents the afternoon crash.</p>
+</section>
 
-    <section class="card">
-      <h2>🧪 Signals to Notice</h2>
-      <ul>
-        <li>Motivation dips or irritability? Not laziness — <strong>it’s chemistry shifting gears.</strong><em class="why">→ Estrogen is tapering off, and progesterone is rising. That changes how your body uses glucose and neurotransmitters — so your usual pace might suddenly feel “off.”</em></li>
-        <li>Afternoon crash or “can’t focus” moments — your nervous system is asking for fuel, not guilt.<em class="why">→ When cortisol and glucose misalign, brain fog and cravings are just biochemical messages. Try protein + minerals mid-morning to reset stability.</em></li>
-        <li>Feeling like your body’s “shoulds” are arguing with your energy? You’re not failing — you’re recalibrating.<em class="why">→ This phase thrives on rhythm, not pressure. Backing off a sprint here means smoother hormones later.</em></li>
-      </ul>
-    </section>
+<section class="card">
+  <h2>🧪 Signals to Notice</h2>
+  <table style="width:100%;border-collapse:collapse;font-size:.95rem;">
+    <thead>
+      <tr style="text-align:left;border-bottom:1px solid var(--line);">
+        <th style="padding:4px 0;">What you feel</th>
+        <th style="padding:4px 0;">What’s happening</th>
+        <th style="padding:4px 0;">Support move</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr><td>Motivation dips / irritability</td><td>Estrogen taper + rising progesterone slow glucose use and dopamine turnover.</td><td>Protein + magnesium mid-morning; lighten workload.</td></tr>
+      <tr><td>Afternoon crash / fog</td><td>Blood sugar + cortisol out of sync.</td><td>Small protein-fiber snack + hydration reset.</td></tr>
+      <tr><td>Body feels “off pace”</td><td>Nervous-system shift into recovery mode.</td><td>Walk, breathe, stretch — restore rhythm instead of forcing output.</td></tr>
+    </tbody>
+  </table>
+  <p class="why">→ The body isn’t betraying you; it’s asking for metabolic consistency.</p>
+</section>
 
-    <section class="card">
-      <h2>🧰 Support Moves</h2>
-      <ul>
-        <li><strong>Front-load protein + fiber</strong> — 20–30 g with breakfast steadies blood sugar and mood.</li>
-        <li><strong>Move to spark, not drain</strong> — a brisk walk or short weights session boosts dopamine without tipping cortisol.</li>
-        <li><strong>Hydrate steadily</strong> — water + minerals keep estrogen’s energy lift smooth instead of spiky.</li>
-      </ul>
-      <em class="why">→ Consistency fuels clarity. You’re teaching your brain what steady feels like again.</em>
-    </section>
+<section class="card">
+  <h2>🧰 Support Moves</h2>
+  <ul>
+    <li><strong>Front-load protein + fiber:</strong> 20–30 g with breakfast steadies blood sugar and mood.</li>
+    <li><strong>Move to spark, not drain:</strong> brisk walk or short weights session boosts dopamine without spiking cortisol.</li>
+    <li><strong>Hydrate steadily:</strong> water + minerals keep estrogen’s energy lift smooth instead of spiky.</li>
+  </ul>
+  <em class="why">→ Consistency fuels clarity. You’re teaching your brain what “steady” feels like again.</em>
+</section>
 
-    <section class="card">
-      <h2>💭 Reflection Prompt</h2>
-      <p>What felt easier to start today? Where did focus flow without forcing it?</p>
-      <em class="why">→ Celebrate stability — this is your brain catching its rhythm.</em>
-    </section>
+<section class="card">
+  <h2>💭 Reflection Prompt</h2>
+  <p><em>What felt easier to start today? Where did focus flow without forcing it?</em></p>
+  <em class="why">→ Celebrate stability — this is your brain finding its rhythm again.</em>
+</section>
 
-    <section class="card">
-      <h2>🧠 Why (mini-physiology)</h2>
-      <p class="tiny">
-        As estrogen declines and progesterone takes the lead, your brain’s glucose use slows slightly — especially in the prefrontal cortex (focus, drive, planning). The body redirects resources toward repair and progesterone’s calming work.
-      </p>
-      <em class="why">→ Supporting this phase with balanced meals and recovery movement keeps your nervous system steady and stops mid-cycle crashes.</em>
-    </section>
+<section class="card">
+  <h2>🧠 Why (mini-physiology)</h2>
+  <p class="tiny">
+    As estrogen declines and progesterone takes the lead, glucose metabolism slows — especially in the prefrontal cortex (focus, drive, planning).  
+    Your body redirects resources toward repair and progesterone’s calming work, which can make you feel slower or heavier if under-fuelled.  
+    Stable protein + minerals keep neurotransmitters balanced and prevent the mid-cycle “crash-and-crave” loop.
+  </p>
+</section>
+
+
 
     <div class="cta-row">
       <a class="btn" href="day3-video.html">Watch Today’s Video</a>
