beta feedback edits

--- a/day4/day4-cheatsheet.html
+++ b/day4/day4-cheatsheet.html
@@ -102,60 +102,85 @@
     </div>
 
     <header>
-      <h1>Day 4 — Hormones Shifting Again? Foggy? Moody?<br/>Good. That’s Your Signal</h1>
-      <div class="sub">This isn’t a crash — it’s data you can use.</div>
-    </header>
+  <h1>Day 4 — Hormones Shifting Again? Foggy? Moody?<br>Good. That’s Your Signal.</h1>
+  <div class="sub">This isn’t a crash — it’s data you can use.</div>
+</header>
 
-    <figure class="hero">
-      <img src="yoga.jpg" alt="Gentle yoga class — moving with your cycle">
-    </figure>
+<figure class="hero">
+  <img src="yoga.jpg" alt="Gentle yoga — moving with your cycle">
+</figure>
 
-    <section class="card">
-      <h2>🧭 Cycle Lens</h2>
-      <ul>
-        <li><strong>Late luteal</strong> = hormones sliding; mood + focus dip. Your body wants nurture, repair, and a slower pace.</li>
-        <li>When you stop fighting, the fog becomes information. Treat it like a system update, not a character flaw.</li>
-      </ul>
-    </section>
+<section class="card">
+  <h2>🧭 Cycle Lens</h2>
+  <ul>
+    <li><strong>Late luteal</strong> = hormones sliding, mood + focus dipping, body asking for nurture and slower rhythm.</li>
+    <li>This isn’t a crash — it’s a controlled descent. Estrogen and progesterone are both tapering, pulling glucose use and serotonin levels down.</li>
+    <li>→ When you stop fighting the fog, it turns into feedback. Treat it like a system update, not a personal failure.</li>
+  </ul>
+</section>
 
-    <section class="card tone">
-      <h2>🌙 Quick Win</h2>
-      <p><strong>Swap push for precision:</strong> pick <em>one</em> right-size move today (hydration, protein, a 15-minute walk, or a mini yoga flow). Repeat it at the same time tomorrow. Hold a tiny routine for this phase — you’ll feel your body stop hunting for comfort.</p>
-    </section>
+<section class="card tone">
+  <h2>🌙 Quick Win</h2>
+  <p><strong>Swap push for precision:</strong> choose <em>one</em> right-sized move — hydration, protein, a 15-minute walk, or a mini yoga flow.<br>
+  <em class="why">Why it matters:</em> predictability soothes your nervous system when chemistry feels chaotic. Repeat it at the same time tomorrow — that rhythm tells your body it’s safe to settle.</p>
+</section>
 
-    <section class="card">
-      <h2>🔎 Signals to Notice</h2>
-      <ul>
-        <li><strong>Mood/focus dip ≠ failure</strong> — it’s your system recalibrating.</li>
-        <li>Clarity improves when you stop wrestling yourself. Ask: <em>“What am I feeling?”</em> then match support to the signal.</li>
-        <li>Short, small moves beat big, erratic pushes. This is not the moment to chase maxes.</li>
-      </ul>
-    </section>
+<section class="card">
+  <h2>🔎 Signals to Notice</h2>
+  <table style="width:100%;border-collapse:collapse;font-size:.95rem;">
+    <thead>
+      <tr style="text-align:left;border-bottom:1px solid var(--line);">
+        <th style="padding:4px 0;">What you feel</th>
+        <th style="padding:4px 0;">What’s happening</th>
+        <th style="padding:4px 0;">Support move</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>Mood or focus dip</td>
+        <td>Estrogen + progesterone both falling → slower neurotransmission + lower glucose efficiency.</td>
+        <td>Hydrate, eat protein, and lower intensity — this is restoration, not retreat.</td>
+      </tr>
+      <tr>
+        <td>Foggy, unfocused, restless</td>
+        <td>Nervous system entering low-gear reset mode.</td>
+        <td>Ground with warmth: light walk, journaling, gentle yoga.</td>
+      </tr>
+      <tr>
+        <td>Overwhelm or self-criticism</td>
+        <td>Dopamine + serotonin dips magnify emotion and doubt.</td>
+        <td>Pause. Do one small thing completely, then rest without guilt.</td>
+      </tr>
+    </tbody>
+  </table>
+  <p class="why">→ These signals aren’t regression — they’re recalibration.</p>
+</section>
 
-    <section class="card">
-      <h2>🧰 Support Moves</h2>
-      <ul>
-        <li><strong>Right fuel, right time:</strong> protein + minerals early; put caffeine after food.</li>
-        <li><strong>Right move, right dose:</strong> 10–20 minutes of gentle cardio or mobility when foggy.</li>
-        <li><strong>Right boundary:</strong> reschedule extras on low-capacity days. If your “Yes” hat has been glued on, peel it off for a bit.</li>
-      </ul>
-      <em class="why">→ These signals are recalibration, not regression. Meet them with rhythm, not resistance.</em>
-    </section>
+<section class="card">
+  <h2>🧰 Support Moves</h2>
+  <ul>
+    <li><strong>Right fuel, right time:</strong> protein + minerals within an hour of waking. Caffeine <em>after</em> food.</li>
+    <li><strong>Right move, right dose:</strong> 10–20 minutes of gentle cardio or mobility when foggy — steady, not sweaty.</li>
+    <li><strong>Right boundary:</strong> reschedule extras. Protect the quiet that lets your chemistry rebalance.</li>
+  </ul>
+  <em class="why">→ You’re syncing with your system’s update, not slowing down — precision now means smoother energy later.</em>
+</section>
 
-    <section class="card">
-      <h2>💭 Reflection Prompt</h2>
-      <p>If I treat today like a calibration day, what becomes easier — and what can wait?</p>
-      <em class="why">→ You’re not behind — you’re syncing with your own system update.</em>
-    </section>
+<section class="card">
+  <h2>💭 Reflection Prompt</h2>
+  <p><em>If I treat today like calibration instead of collapse, what becomes easier — and what can wait?</em></p>
+  <em class="why">→ You’re not behind. You’re aligning.</em>
+</section>
 
-    <section class="card">
-      <h2>🧠 Why (mini-physiology)</h2>
-      <p class="tiny">
-        As <strong>estrogen and progesterone</strong> both drop, executive function and sleep efficiency dip.
-        <strong>Precision beats push:</strong> shorter efforts, calmer evenings, and earlier caffeine protect your brain’s brakes.
-      </p>
-      <em class="why">→ Hormones are transitioning toward the bleed phase — treat this as a pre-reset, not a crash.</em>
-    </section>
+<section class="card">
+  <h2>🧠 Why (mini-physiology)</h2>
+  <p class="tiny">
+    As <strong>estrogen and progesterone</strong> both decline, the brain’s glucose use and serotonin balance dip — lowering focus, mood, and sleep efficiency.  
+    <strong>Precision beats push:</strong> smaller efforts, earlier caffeine, and calmer evenings protect your nervous system as it shifts toward menstruation.  
+    Treat this as a pre-reset phase — your chemistry is clearing space for renewal, not crashing.
+  </p>
+</section>
+
 
     <div class="cta-row">
       <a class="btn" href="day4-video.html">Watch Today’s Video</a>
