beta feedback rewrite

--- a/day5/day5-cheatsheet.html
+++ b/day5/day5-cheatsheet.html
@@ -102,56 +102,93 @@
     </div>
 
     <header>
-      <h1>Day 5 — Anchoring Your Rhythm — The 5-Day Capstone</h1>
-      <div class="sub">You’ve felt what happens when you stop fighting and start listening.</div>
-    </header>
+  <h1>Day 5 — Anchoring Your Rhythm — The 5-Day Capstone</h1>
+  <div class="sub">You’ve felt what happens when you stop fighting and start listening.</div>
+</header>
 
-    <figure class="hero">
-      <img src="ladies-dining.jpg" alt="Women dining and celebrating together">
-    </figure>
+<figure class="hero">
+  <img src="ladies-dining.jpg" alt="Women dining and celebrating together">
+</figure>
 
-    <section class="card">
-      <h2>🧭 Cycle Lens</h2>
-      <ul>
-        <li>Pre-menstrual → early bleed transition = <strong>reset moment</strong>.</li>
-        <li>That feeling of willing your period to start? It’s your body asking for closure and reset.</li>
-      </ul>
-    </section>
+<section class="card">
+  <h2>🧭 Cycle Lens</h2>
+  <ul>
+    <li><strong>Pre-menstrual → early bleed transition</strong> = the body’s built-in <strong>reset moment</strong>.</li>
+    <li>That edge of restlessness before bleeding starts? It’s your chemistry asking for closure, not chaos — a nervous-system sigh before renewal.</li>
+    <li>→ Energy may flicker, but clarity rises. You’re integrating everything you learned this week.</li>
+  </ul>
+</section>
 
-    <section class="card tone">
-      <h2>🌙 Quick Win</h2>
-      <p><strong>Choose one tiny ritual</strong> to repeat every morning for 7 days (e.g. water + electrolytes before coffee). <strong>Consistency beats intensity.</strong></p>
-    </section>
+<section class="card tone">
+  <h2>🌙 Quick Win</h2>
+  <p><strong>Choose one micro-ritual</strong> to repeat each morning for 7 days — water + electrolytes before coffee, a 10-minute walk, or a quick journal line.<br>
+  <em class="why">Why it matters:</em> your brain rewires fastest through repetition. Tiny consistencies tell your hormones, *“we’re safe — we can regulate now.”*</p>
+</section>
 
-    <section class="card">
-      <h2>🧪 Signals to Notice</h2>
-      <ul>
-        <li>What shifted this week — steadier energy, fewer crashes, clearer signals?</li>
-        <li>Which day’s quick win helped most? That’s your <strong>anchor habit</strong>.</li>
-        <li>You’re not broken — you mapped your rhythm.</li>
-      </ul>
-    </section>
+<section class="card">
+  <h2>🧪 Signals to Notice</h2>
+  <table style="width:100%;border-collapse:collapse;font-size:.95rem;">
+    <thead>
+      <tr style="text-align:left;border-bottom:1px solid var(--line);">
+        <th style="padding:4px 0;">What you felt</th>
+        <th style="padding:4px 0;">What it meant</th>
+        <th style="padding:4px 0;">How to anchor it</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>Steadier mornings</td>
+        <td>Blood-sugar and cortisol balance improving through rhythm.</td>
+        <td>Keep your morning fuel timing consistent.</td>
+      </tr>
+      <tr>
+        <td>Clearer signals</td>
+        <td>You’re noticing patterns instead of reacting to them.</td>
+        <td>Journal or voice-note one cue per day — that’s data gold.</td>
+      </tr>
+      <tr>
+        <td>Less self-criticism</td>
+        <td>Nervous-system trust restored by predictability.</td>
+        <td>Maintain your “anchor habit” — it’s your reset button.</td>
+      </tr>
+    </tbody>
+  </table>
+</section>
 
-    <section class="card">
-      <h2>🧰 Support Moves</h2>
-      <ul>
-        <li><strong>Keep the anchor:</strong> hydration + protein early.</li>
-        <li><strong>Keep the pace:</strong> lighter days aren’t “less” — they’re strategic.</li>
-        <li><strong>Keep the grace:</strong> speak to yourself like your best friend.</li>
-      </ul>
-      <em class="why">→ Your nervous system loves rhythm more than hustle. Protect the rituals that keep you steady.</em>
-    </section>
+<section class="card">
+  <h2>🧰 Support Moves</h2>
+  <ul>
+    <li><strong>Keep the anchor:</strong> hydration + protein early — it steadies estrogen’s rise next phase.</li>
+    <li><strong>Keep the pace:</strong> lighter days aren’t “less,” they’re strategy — recovery is rhythm.</li>
+    <li><strong>Keep the grace:</strong> you taught your brain that ease creates results. Don’t unlearn that.</li>
+  </ul>
+  <em class="why">→ The body remembers stability. Protect the rituals that kept you steady — they’re your new baseline.</em>
+</section>
 
-    <section class="card">
-      <h2>💭 Reflection Prompt</h2>
-      <p>What one rhythm will I carry into the next month? What support do I need to protect it?</p>
-      <em class="why">→ This is the seed of your long-term cycle sync — small, daily, doable.</em>
-    </section>
+<section class="card">
+  <h2>💭 Reflection Prompt</h2>
+  <p><em>What one rhythm will I carry into the next month?<br>
+  What support or structure do I need to protect it?</em></p>
+  <em class="why">→ This is the seed of your long-term sync — small, daily, doable.</em>
+</section>
 
-    <section class="card">
-      <h2>🧠 Why (mini-physiology)</h2>
-      <p class="tiny"><strong>Lower load + consistent rituals restore capacity.</strong> Your system loves rhythm more than intensity.</p>
-    </section>
+<section class="card">
+  <h2>🧠 Why (mini-physiology)</h2>
+  <p class="tiny">
+    As estrogen and cortisol begin to rise again post-bleed, consistency in sleep, hydration, and protein intake keeps your HPA (stress) axis stable.  
+    <strong>Lower load + repeated patterns = faster nervous-system repair.</strong>  
+    Your biology doesn’t crave perfection — it craves rhythm.
+  </p>
+</section>
+
+<section class="card tone">
+  <h2>🪷 Next Step</h2>
+  <p>Ready to keep building?  
+  The <strong>Diana Air 6-Week Blueprint</strong> deepens this foundation with phase-by-phase guidance, live support, and expanded rhythm tracking.</p>
+  <div style="text-align:center; margin-top:14px;">
+    <a class="btn ghost" href="https://artificialmomentum.com/waitlist">Join the 6-Week Blueprint Waitlist</a>
+  </div>
+</section>
 
     <div class="cta-row">
       <a class="btn" href="day5-video.html">Watch Today’s Video</a>
