--- a/thankyou/youre-in.html
+++ b/thankyou/youre-in.html
@@ -109,7 +109,7 @@
         Let’s reset. I’ve got you.<br />
         — Diana x
 
-            <p>Make sure your emails from <strong>rtr@artificialmomentum.com</strong> are marked safe — you won’t want to miss Day a thing!</p>
+            <p>Make sure your emails from <strong>rtr@artificialmomentum.com</strong> are marked safe — you won’t want to miss a thing!</p>
 
       </div>
 
