sender code refresh

--- a/beta2/index.html
+++ b/beta2/index.html
@@ -94,7 +94,7 @@ img.loaded {
 
 
   </style>
-  <script>
+  <<script>
   (function (s, e, n, d, er) {
     s['Sender'] = er;
     s[er] = s[er] || function () {
