--- a/nov-30.html
+++ b/nov-30.html
@@ -109,7 +109,7 @@
     </header>
 
     <p>We’re almost ready to begin ✨</p>
-    <p>Your 5-day <strong>Raw to Reset</strong> journey starts on <strong>Sunday, November 23</strong>.</p>
+    <p>Your 5-day <strong>Raw to Reset</strong> journey starts on <strong>Sunday, November 30th</strong>.</p>
     <p>You’ll get your first video, cheat sheet, recipe, and journal page straight to your inbox that morning.</p>
 
     <p>Until then, make sure your emails from <strong>rtr@artificialmomentum.com</strong> are marked safe — you won’t want to miss Day 1!</p>
