--- a/day4/day4-cheatsheet.html
+++ b/day4/day4-cheatsheet.html
@@ -179,6 +179,7 @@
     <strong>Precision beats push:</strong> smaller efforts, earlier caffeine, and calmer evenings protect your nervous system as it shifts toward menstruation.  
     Treat this as a pre-reset phase — your chemistry is clearing space for renewal, not crashing.
   </p>
+  <em class="why">→ Hormones are transitioning toward the bleed phase — treat this as a pre-reset, not a crash.</em>
 </section>
 
 
