returned deep red line to "why"

--- a/day3/day3-cheatsheet.html
+++ b/day3/day3-cheatsheet.html
@@ -167,6 +167,7 @@
     Your body redirects resources toward repair and progesterone’s calming work, which can make you feel slower or heavier if under-fuelled.  
     Stable protein + minerals keep neurotransmitters balanced and prevent the mid-cycle “crash-and-crave” loop.
   </p>
+  <em class="why">→ Supporting this phase with balanced meals and recovery movement.</em>
 </section>
 
 
